# Zap-RiskAnalysis-AI-ML

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
docs/: PROJECT_STRUCTURE.md
ml-bug-prediction/: .gitignore  AUTH_SYSTEM_README.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  run.py  setup.py
ml-bug-prediction/data/: JIRA  processed-1  raw-1
ml-bug-prediction/deployments/: database_schema.sql
ml-bug-prediction/docs/: INTEGRATION_GUIDE.md  MULTIUSER_DEPLOYMENT_GUIDE.md  MULTIUSER_IMPLEMENTATION_SUMMARY.md  NOTEBOOK_MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  PWA_FEATURES.md  README.md  SETTINGS_GUIDE.md  ai_roadmap.md
ml-bug-prediction/notebooks/: AND_Bugs_Predict_Report.ipynb  AWC_Bugs_Predict_Report.ipynb  MSG_Bugs_Predict_Report.ipynb  Test.ipynb  WS_Bugs_Predict_Report.ipynb  iOS_Bugs_Predict_Report.ipynb  import sys  notebook_helper.py
ml-bug-prediction/notebooks/config/: jira_config.json  projects_config.json
ml-bug-prediction/requirements/: requirements.txt  requirements_webapp.txt
ml-bug-prediction/scripts/: list_jira_projects.py  setup_environment.py  start_dashboard.py
ml-bug-prediction/src/ml_bug_prediction/: __init__.py  app.py  config.py
ml-bug-prediction/src/ml_bug_prediction/models/: __init__.py  advanced_ai_engine.py  ai_enhancements.py  ai_intelligence.py  component_risk_table.py  data_preprocessing.py  feature_engineering.py  model_training.py  predict.py  trend_analysis.py
ml-bug-prediction/src/ml_bug_prediction/services/: __init__.py  analytics.py  auth.py  auth_manager.py  goal_tracking.py  settings_manager.py
ml-bug-prediction/src/ml_bug_prediction/utils/: __init__.py  alert_system.py  jira_utils.py  notebook_helper.py
ml-bug-prediction/src/ml_bug_prediction/web/: __init__.py
ml-bug-prediction/static/: info-dropdown.js  manifest.json  offline.html  profile-functions.js  profile-manager.js  push-notifications.js  sw.js
ml-bug-prediction/static/icons/: create-icons.html
ml-bug-prediction/templates/: dashboard.html  help.html  login.html  profile.html  register.html  settings.html  use-cases-documentation.html  use-cases.html  user-guide.html
src/ml_bug_prediction/: __init__.py
src/ml_bug_prediction/models/: __init__.py
src/ml_bug_prediction/services/: __init__.py
src/ml_bug_prediction/utils/: __init__.py
src/ml_bug_prediction/web/: __init__.py
